syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.renato";
option java_outer_classname = "CasaDoCodigo";
option objc_class_prefix = "HLW";

package br.com.renato;

service CadastroAutorService {
  rpc cadastraAutor (NovoAutorRequest) returns (NovoAutorResponse) {}
}

message NovoAutorRequest {
  string nome = 1;
  string email = 2;
  string descricao = 3;

}

message NovoAutorResponse {
  string id = 1;
}